base/chat-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-front
  labels:
    app: chat-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-front
  template:
    metadata:
      labels:
        app: chat-front
    spec:
      containers:
        - name: chat-front
          image: chat-front
          volumeMounts:
            - name: config-volume
              mountPath: /microservice/config-docker.yml
              subPath: config-docker.yml
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: config-volume
          configMap:
            name: chat-front-config
