base/chat-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-db
  labels:
    app: chat-db
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
    app: chat-db
  type: ClusterIP
