base/chat-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-front
  labels:
    app: chat-front
spec:
  type: ClusterIP
  selector:
    app: chat-front
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
